Fixed IAccessible::accNavigate for NAVDIR_NEXT and NAVDIR_PREVIOUS when start object was a simple child and added extensive tests.

BUG=722148
R=dmazzoni@chromium.org, dougt@chromium.org
TESTED=unit tests, NVDA's navigator object cursor

Review-Url: https://codereview.chromium.org/2877313003
Cr-Commit-Position: refs/heads/master@{#472152}

Former-commit-id: 2fa0d466bdbd2b52ba16ad9435a2f93d7f4084a5